<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Maximilian Fellner, Gernot Solic, Florian Sumann

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License. -->
<resources>

    <string name="app_name">Energy2Live</string>
    <string name="lbl_login_email">Enter your user name</string> <!--  TODO change back to email address -->
    <string name="lbl_login_password">Enter your password</string>
    <string name="lbl_latest_activities">Your latest activities</string>
    <string name="lbl_add_new_name">Enter activity name</string>
    <string name ="lbl_add_new_duration">Select duration of activity</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_add_new_add">Add activity</string>
    <string name="btn_duration_select">Select</string>
    <string name="btn_record_start">Start Recording</string>
    <string name="btn_record_stop">Stop Recording</string>
    <string name="btn_manage_activity_send">Send To Server</string>
    <string name="title_actionbar_main">Energy2Live</string>
    <string name="title_actionbar_manage">Manage Activity</string>
    <string name="title_actionbar_settings">Settings</string>
    <string name="title_actionbar_record">Record New Activity</string>
    <string name="title_actionbar_add_new">Add New Activity</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="dialog_add_new_title">Add New Activity</string>
    <string name="dialog_about_title">Energy2Live</string>
    <string name="dialog_about_message">www.kmi.tugraz.at</string>
    <string name="dialog_about_button">close</string>
    <string name="msg_delete_activity">Delete this activity?</string>
    <string name="msg_stop_recording">Stop recording activity?</string>
    <string name="msg_send_activity">Send activity to remote server?</string>
    <string name="msg_bad_time">Please enter a valid time</string>
    <string name="msg_creation_successful">Activity created</string>
    <string name="msg_empty_fields">Please fill out all fields</string>
    <string name="msg_no_provider">No location provider available (GPS, Wifi, network)</string>
    <string name="msg_settings_bad_server">Invalid server address!</string>
    <string name="msg_remote_no_server">No server address configured!</string>
    <string name="msg_remote_post_login">Logging in…</string>
    <string name="msg_remote_post_register">Registering…</string>
    <string name="msg_remote_post_activity">Uploading…</string>
    <string name="msg_login_failed">Login failed</string>
    <string name="msg_manage_upload_success">Activity upload successful</string>
    <string name="msg_manage_upload_failed">Activity upload failed</string>

    <string name="lbl_manage_activity_name_label">Name:</string>
    <string name="lbl_manage_activity_time_label">Time:</string>
    <string name="lbl_manage_activity_duration_label">Duration:</string>
    
    <string name="lbl_settings_server">Remote Server IP-Address</string>
    
    <string name="lbl_record_vehicle">Select means of transport</string>
    
    <string name="hours">hour(s)</string>
    <string name="minutes">minute(s)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="actionbar_activity_not_found">Failed to open intent…</string>

</resources>