<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2011 Maximilian Fellner, Gernot Solic, Florian Sumann

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:e2l="http://schemas.android.com/apk/res/at.tugraz.kmi.energy2live"
    android:id="@+id/main_relative_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <at.tugraz.kmi.energy2live.widget.ActionBar
       android:id="@+id/record_actionbar"
       e2l:title="@string/title_actionbar_record"
       style="@style/ActionBar" />
    
    <TextView
        android:id="@+id/lbl_record_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/record_actionbar"
        android:text="@string/lbl_add_new_name" />

    <EditText
        android:id="@+id/txt_record_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/lbl_record_name"
        android:maxLines="1" >
        <requestFocus />
    </EditText>
    
    
    <ToggleButton
        android:id="@+id/btn_record_start_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="5dp"
        android:checked="false"
        android:onClick="btnRecordStartStopClicked"
        android:textOn="@string/btn_record_stop"
        android:textOff="@string/btn_record_start" />

</RelativeLayout>