<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2011 Maximilian Fellner, Gernot Solic, Florian Sumann

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:e2l="http://schemas.android.com/apk/res/at.tugraz.kmi.energy2live"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <at.tugraz.kmi.energy2live.widget.ActionBar
       android:id="@+id/manage_actionbar"
       e2l:title="@string/title_actionbar_manage"
       style="@style/ActionBar" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/lbl_manage_activity_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_manage_activity_name_label" />
        <TextView
            android:id="@+id/lbl_manage_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/lbl_manage_activity_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_manage_activity_time_label" />
        <TextView
            android:id="@+id/lbl_manage_activity_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/lbl_manage_activity_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_manage_activity_duration_label" />
        <TextView
            android:id="@+id/lbl_manage_activity_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
            
        <com.google.android.maps.MapView
            android:id="@+id/manage_mapview"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:apiKey="0hypPmrMg3itDPk2gbCJQjJLpOcJh_kFQoYzNiQ"
            android:clickable="false" />
            <!-- TODO replace debug token in release version -->
            
        <Button
            android:id="@+id/btn_manage_activity_send"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendButtonClicked"
            android:text="@string/btn_manage_activity_send" />
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>